waffle: overlay: Update power profile from CPH2581
Change-Id: If39bbf95252881a5428d8c9bcdd60a33977d18d8
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/overlay/OPlusFrameworksResTarget/res/xml/power_profile.xml
+++ b/overlay/OPlusFrameworksResTarget/res/xml/power_profile.xml
@@ -59,10 +59,10 @@
   <item name="wifi.on">1.8</item>  <!-- ~3mA -->
   <item name="wifi.active">223</item>  <!-- WIFI data transfer, ~200mA -->
   <item name="wifi.scan">120</item>  <!-- WIFI network scanning, ~100mA -->
-  <item name="audio">0</item> <!-- ~10mA -->
+  <item name="audio">54.2</item> <!-- ~10mA -->
   <item name="video">0</item> <!-- ~50mA -->
   <item name="camera.flashlight">180</item> <!-- Avg. power for camera flash, ~160mA -->
-  <item name="camera.avg">1047</item> <!-- Avg. power use of camera in standard usecases, ~550mA -->
+  <item name="camera.avg">596</item> <!-- Avg. power use of camera in standard usecases, ~550mA -->
   <item name="gps.on">75</item> <!-- ~50mA -->
 
   <item name="dsp.audio">78</item> <!-- new add ~10mA -->
@@ -96,8 +96,9 @@
          <value>2</value> // cluster 1 has cpu4, cpu5
        </array> -->
   <array name="cpu.clusters.cores">
-      <value>3</value> <!-- cluster 0 has cpu0, cpu1, cpu2, cpu3 -->
-      <value>4</value> <!-- cluster 1 has cpu4, cpu5, cpu6 -->
+      <value>2</value> <!-- cluster 0 has cpu0, cpu1, cpu2, cpu3 -->
+      <value>3</value> <!-- cluster 1 has cpu4, cpu5, cpu6 -->
+      <value>2</value> <!-- cluster 1 has cpu4, cpu5, cpu6 -->
       <value>1</value> <!-- cluster 2 has cpu7 -->
   </array>
 
@@ -107,22 +108,24 @@
        There must be one of these for each cluster, labeled:
        cpu.speeds.cluster0, cpu.speeds.cluster1, etc... -->
     <array name="cpu.core_speeds.cluster0">
-        <value>307200</value>    <!-- 300   MHz CPU speed -->
-        <value>441600</value>
+        <value>364800</value>
+        <value>460800</value>
         <value>556800</value>
         <value>672000</value>
         <value>787200</value>
         <value>902400</value>
         <value>1017600</value>
-        <value>1113600</value>
-        <value>1228800</value>
+        <value>1132800</value>
+        <value>1248000</value>
         <value>1344000</value>
         <value>1459200</value>
-        <value>1555200</value>
-        <value>1670400</value>
-        <value>1785600</value>
-        <value>1900800</value>
-        <value>2016000</value>
+        <value>1574400</value>
+        <value>1689600</value>
+        <value>1804800</value>
+        <value>1920000</value>
+        <value>2035200</value>
+        <value>2150400</value>
+        <value>2265600</value>
     </array>
 
     <array name="cpu.core_speeds.cluster1">
@@ -130,120 +133,238 @@
         <value>614400</value>
         <value>729600</value>
         <value>844800</value>
-        <value>940800</value>
-        <value>1056000</value>
-        <value>1171200</value>
+        <value>960000</value>
+        <value>1075200</value>
+        <value>1190400</value>
         <value>1286400</value>
         <value>1401600</value>
-        <value>1536000</value>
-        <value>1651200</value>
-        <value>1785600</value>
+        <value>1497600</value>
+        <value>1612800</value>
+        <value>1708800</value>
+        <value>1824000</value>
         <value>1920000</value>
-        <value>2054400</value>
+        <value>2035200</value>
+        <value>2131200</value>
         <value>2188800</value>
+        <value>2246400</value>
         <value>2323200</value>
-        <value>2457600</value>
-        <value>2592000</value>
+        <value>2380800</value>
+        <value>2438400</value>
+        <value>2515200</value>
+        <value>2572800</value>
+        <value>2630400</value>
         <value>2707200</value>
-        <value>2803200</value>
-    </array>
-    
+        <value>2764800</value>
+        <value>2841600</value>
+        <value>2899200</value>
+        <value>2956800</value>
+        <value>3014400</value>
+        <value>3072000</value>
+        <value>3148800</value>
+</array>
+
     <array name="cpu.core_speeds.cluster2">
-        <value>595200</value>
+        <value>499200</value>
+        <value>614400</value>
         <value>729600</value>
-        <value>864000</value>
-        <value>998400</value>
+        <value>844800</value>
+        <value>960000</value>
+        <value>1075200</value>
+        <value>1190400</value>
+        <value>1286400</value>
+        <value>1401600</value>
+        <value>1497600</value>
+        <value>1612800</value>
+        <value>1708800</value>
+        <value>1824000</value>
+        <value>1920000</value>
+        <value>2035200</value>
+        <value>2131200</value>
+        <value>2188800</value>
+        <value>2246400</value>
+        <value>2323200</value>
+        <value>2380800</value>
+        <value>2438400</value>
+        <value>2515200</value>
+        <value>2572800</value>
+        <value>2630400</value>
+        <value>2707200</value>
+        <value>2764800</value>
+        <value>2841600</value>
+        <value>2899200</value>
+        <value>2956800</value>
+    </array>
+
+    <array name="cpu.core_speeds.cluster3">
+        <value>480000</value>
+        <value>576000</value>
+        <value>672000</value>
+        <value>787200</value>
+        <value>902400</value>
+        <value>1017600</value>
         <value>1132800</value>
         <value>1248000</value>
         <value>1363200</value>
         <value>1478400</value>
         <value>1593600</value>
         <value>1708800</value>
-        <value>1843200</value>
-        <value>1977600</value>
-        <value>2092800</value>
-        <value>2227200</value>
-        <value>2342400</value>
-        <value>2476800</value>
-        <value>2592000</value>
-        <value>2726400</value>
-        <value>2841600</value>
-        <value>2956800</value>
-        <value>3187200</value>        
+        <value>1824000</value>
+        <value>1939200</value>
+        <value>2035200</value>
+        <value>2112000</value>
+        <value>2169600</value>
+        <value>2246400</value>
+        <value>2304000</value>
+        <value>2380800</value>
+        <value>2438400</value>
+        <value>2496000</value>
+        <value>2553600</value>
+        <value>2630400</value>
+        <value>2688000</value>
+        <value>2745600</value>
+        <value>2803200</value>
+        <value>2880000</value>
+        <value>2937600</value>
+        <value>2995200</value>
+        <value>3052800</value>
+        <value>3110400</value>
+        <value>3187200</value>
+        <value>3244800</value>
+        <value>3302400</value>
     </array>
   <!-- Current at each CPU speed for cluster 0, as per 'cpu.speeds.cluster0'.
        Like cpu.speeds.cluster0, there must be one of these present for
        each heterogeneous CPU cluster. -->
   <array name="cpu.core_power.cluster0">
-      <value>5</value>   <!-- ~5 mA -->
-      <value>6</value>   <!-- ~6 mA -->
-      <value>8</value>   <!-- ~8 mA -->
-      <value>9</value>   <!-- ~9 mA -->
-      <value>11</value>   <!-- ~11 mA -->
-      <value>11</value>   <!-- ~11 mA -->
-      <value>12</value>   <!-- ~12 mA -->
-      <value>12</value>   <!-- ~12 mA -->
-      <value>19</value>   <!-- ~19 mA -->
-      <value>22</value>   <!-- ~22 mA -->
-      <value>25</value>  <!-- ~25 mA -->
-      <value>28</value>  <!-- ~28 mA -->
-      <value>32</value>  <!-- ~32 mA -->
-      <value>35</value>  <!-- ~35 mA -->
-      <value>46</value>  <!-- ~46 mA -->
-      <value>51</value>  <!-- ~51 mA -->
+        <value>3.3</value>
+        <value>5.2</value>
+        <value>6.8</value>
+        <value>8.7</value>
+        <value>10.8</value>
+        <value>12.8</value>
+        <value>14.7</value>
+        <value>17.1</value>
+        <value>19.9</value>
+        <value>22.0</value>
+        <value>25.3</value>
+        <value>28.9</value>
+        <value>34.8</value>
+        <value>40.8</value>
+        <value>46.8</value>
+        <value>50.6</value>
+        <value>56.7</value>
+        <value>63.6</value>
   </array>
 
   <!-- Current at each CPU speed for cluster 1, as per 'cpu.speeds.cluster1'.
        Like cpu.speeds.cluster1, there must be one of these present for
        each heterogeneous CPU cluster. -->
   <array name="cpu.core_power.cluster1">
-      <value>15</value>   <!-- ~23 mA -->
-      <value>20</value>   <!-- ~30 mA -->
-      <value>25</value>   <!-- ~37 mA -->
-      <value>30</value>   <!-- ~46 mA -->
-      <value>36</value>   <!-- ~47 mA -->
-      <value>42</value>   <!-- ~61 mA -->
-      <value>50</value>   <!-- ~71 mA -->
-      <value>57</value>   <!-- ~81 mA -->
-      <value>65</value>   <!-- ~92 mA -->
-      <value>74</value>  <!-- ~101mA -->
-      <value>86</value>  <!-- ~144mA -->
-      <value>102</value>  <!-- ~154mA -->
-      <value>126</value>  <!-- ~182mA -->
-      <value>145</value>  <!-- ~213mA -->
-      <value>163</value>  <!-- ~259mA -->
-      <value>190</value>  <!-- ~266mA -->
-      <value>219</value>  <!-- ~266mA -->
-      <value>249</value>  <!-- ~266mA -->    
-      <value>268</value>  <!-- ~266mA -->    
-      <value>291</value>  <!-- ~266mA -->          
+        <value>15.4</value>
+        <value>19.4</value>
+        <value>24.2</value>
+        <value>28.6</value>
+        <value>34.1</value>
+        <value>41.2</value>
+        <value>47.8</value>
+        <value>54.7</value>
+        <value>58.9</value>
+        <value>68.7</value>
+        <value>77.1</value>
+        <value>86.4</value>
+        <value>90.8</value>
+        <value>107.8</value>
+        <value>121.3</value>
+        <value>134.1</value>
+        <value>154.2</value>
+        <value>158.7</value>
+        <value>161.4</value>
+        <value>170.4</value>
+        <value>183.8</value>
+        <value>195.2</value>
+        <value>206.7</value>
+        <value>218.0</value>
+        <value>235.9</value>
+        <value>245.1</value>
+        <value>258.9</value>
+        <value>268.7</value>
+        <value>289.7</value>
+        <value>311.6</value>
+        <value>336.8</value>
+        <value>363.7</value>
+  </array>
+
+  <array name="cpu.core_power.cluster2">
+        <value>15.5</value>
+        <value>20.0</value>
+        <value>24.9</value>
+        <value>30.1</value>
+        <value>35.9</value>
+        <value>43.7</value>
+        <value>51.1</value>
+        <value>54.9</value>
+        <value>64.8</value>
+        <value>72.5</value>
+        <value>80.6</value>
+        <value>88.5</value>
+        <value>100.0</value>
+        <value>109.7</value>
+        <value>114.6</value>
+        <value>134.7</value>
+        <value>155.0</value>
+        <value>160.2</value>
+        <value>164.4</value>
+        <value>167.9</value>
+        <value>178.4</value>
+        <value>187.4</value>
+        <value>198.4</value>
+        <value>209.5</value>
+        <value>226.4</value>
+        <value>237.7</value>
+        <value>262.0</value>
+        <value>275.6</value>
+        <value>296.1</value>
   </array>
 
   <!-- Current at each CPU speed for cluster 2, as per 'cpu.speeds.cluster2'.
        Like cpu.speeds.cluster2, there must be one of these present for
        each heterogeneous CPU cluster. -->
-  <array name="cpu.core_power.cluster2">
-      <value>33</value>   <!-- ~41 mA -->
-      <value>42</value>   <!-- ~50 mA -->
-      <value>52</value>   <!-- ~55 mA -->
-      <value>64</value>   <!-- ~68 mA -->
-      <value>74</value>   <!-- ~74 mA -->
-      <value>87</value>   <!-- ~88 mA -->
-      <value>94</value>   <!-- ~101mA -->
-      <value>110</value>   <!-- ~120mA -->
-      <value>123</value>   <!-- ~135mA -->
-      <value>141</value>   <!-- ~151mA -->
-      <value>164</value>   <!-- ~173mA -->
-      <value>186</value>   <!-- ~201mA -->
-      <value>215</value>   <!-- ~253mA -->
-      <value>258</value>   <!-- ~287mA -->
-      <value>287</value>   <!-- ~330mA -->
-      <value>331</value>   <!-- ~386mA -->
-      <value>370</value>   <!-- ~419mA -->
-      <value>422</value>   <!-- ~449mA -->
-      <value>470</value>   <!-- ~502mA -->
-      <value>529</value>   <!-- ~502mA -->      
-      <value>634</value>   <!-- ~502mA -->            
+  <array name="cpu.core_power.cluster3">
+        <value>31.1</value>
+        <value>39.5</value>
+        <value>47.2</value>
+        <value>59.9</value>
+        <value>70.3</value>
+        <value>84.3</value>
+        <value>97.4</value>
+        <value>114.1</value>
+        <value>126.2</value>
+        <value>143.0</value>
+        <value>160.7</value>
+        <value>181.8</value>
+        <value>201.6</value>
+        <value>223.5</value>
+        <value>241.0</value>
+        <value>253.1</value>
+        <value>279.6</value>
+        <value>297.2</value>
+        <value>343.3</value>
+        <value>356.1</value>
+        <value>369.5</value>
+        <value>393.5</value>
+        <value>408.9</value>
+        <value>425.7</value>
+        <value>456.6</value>
+        <value>481.4</value>
+        <value>511.2</value>
+        <value>553.6</value>
+        <value>592.2</value>
+        <value>605.9</value>
+        <value>655.5</value>
+        <value>741.8</value>
+        <value>828.7</value>
+        <value>916.2</value>
+        <value>1003.7</value>
   </array>
 
   <!-- Current when CPU is awake -->
@@ -258,7 +379,7 @@
   </array>
 
   <!-- This is the battery capacity in mAh (measured at nominal voltage) -->
-  <item name="battery.capacity">5000</item>
+  <item name="battery.capacity">5400</item>
 
   <!-- Wifi related values. -->
   <!-- Idle Receive current for wifi radio in mA. 0 by default-->
