corvette: overlay: Default show volume panel on right side for portrait mode
Change-Id: I751dc935dc51a8b92cfa9973377ef522b5e7bac8
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
Signed-off-by: chandu078 <chandudyavanapelli03@gmail.com>

--- a/overlay/OPlusFrameworksResTarget/res/values/config.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/config.xml
@@ -255,9 +255,9 @@
         Z
     </string>
 
-    <!-- Whether the display cutout region of the main built-in display should be forced to
-         black in software (to avoid aliasing or emulate a cutout that is not physically existent).
-         -->
-    <bool name="config_fillMainBuiltInDisplayCutout">true</bool>
+    <!-- Default volume panel position in portrait mode
+         0: Left side
+         1: Right side -->
+    <integer name="config_volumePanelPosPortDefault">1</integer>
 
 </resources>
