--- a/overlay/OPlusFrameworksResTarget/res/values/config.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/config.xml
@@ -260,4 +260,7 @@
          1: Right side -->
     <integer name="config_volumePanelPosPortDefault">1</integer>
 
+    <!-- Whether device has a centered cutout -->
+    <bool name="config_hasCenteredCutout">true</bool>
+
 </resources>
