corvette: Configure alert slider dimens
Change-Id: Ic7d64ef6363f8d2cab372ef9b2cd4bff363e900c
Signed-off-by: inferno0230 <mail@inferno0230.in>

--- a/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
+++ b/overlay/OPlusSystemUIResTarget/res/values/dimens.xml
@@ -30,4 +30,14 @@
     <!-- Location on the screen of the center of the physical power button. -->
     <dimen name="physical_power_button_center_screen_location_y">1000px</dimen>
 
+    <!-- Alert Slider UI -->
+    <dimen name="tri_state_down_dialog_position">550px</dimen>
+    <dimen name="tri_state_down_dialog_position_l">575px</dimen>
+    <dimen name="tri_state_middle_dialog_position">380px</dimen>
+    <dimen name="tri_state_middle_dialog_position_l">@dimen/tri_state_down_dialog_position_l</dimen>
+    <dimen name="tri_state_up_dialog_position">245px</dimen>
+    <dimen name="tri_state_up_dialog_position_l">@dimen/tri_state_down_dialog_position_l</dimen>
+    <dimen name="tri_state_up_dialog_position_deep">30px</dimen>
+    <dimen name="tri_state_up_dialog_position_deep_land">20px</dimen>
+
 </resources>
