corvette: overlay: Define udfps properties
(cherry-picked from 8924709543d26900c3b8f8d46188a7c31875aa36)

Change-Id: I08be05aac045c0eec305d6ee40e622704ce773df
Signed-off-by: kaffuchino233 <qkivan@proton.me>

--- a/overlay/OPlusFrameworksResTarget/res/values/config.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/config.xml
@@ -263,4 +263,10 @@
     <!-- Whether device has a centered cutout -->
     <bool name="config_hasCenteredCutout">true</bool>
 
+    <!-- The properties of a UDFPS sensor in pixels, in the order listed below: -->
+      <integer-array name="config_udfps_sensor_props" translatable="false" >
+          <item>632</item>  <!-- <item>sensorLocationX</item> -->
+          <item>2025</item> <!-- <item>sensorLocationY</item> -->
+          <item>98</item>  <!-- <item>sensorRadius</item> -->
+     </integer-array>
 </resources>
